manifests/service-5.yml
apiVersion: v1
kind: Service
metadata:
    name: "myakscluster-1f9f"
    labels:
        app: "myakscluster-1f9f"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "myakscluster-1f9f"
