manifests/ingress-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "aqakscluster-84bd"
    labels:
        app: "aqakscluster-84bd"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: hackapi-aqakscluster-84bd.4a680e702b4f4f89ac6e.canadacentral.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "aqakscluster-84bd"
                servicePort: 80
