manifests/ingress-2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "user-java"
    labels:
        app: "user-java"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: hackapi-aqakscluster-b497.4a680e702b4f4f89ac6e.canadacentral.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "user-java"
                servicePort: 8080
