manifests/ingress-4.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "tripviewer"
    labels:
        app: "tripviewer"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: hack-web-aqakscluster-2587.4a680e702b4f4f89ac6e.canadacentral.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "tripviewer"
                servicePort: 88
